secondfile/objects/Case_Comment_Notification__c.object
<CustomObject>
    <description>Email notification will be send whenever new case comments gets added.</description>
    <fields>
        <fullName>Followed_Until__c</fullName>
        <label>Followed Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FollowingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FollowingContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Comment Notification</relationshipLabel>
        <relationshipName>Case_Comment_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Following_From__c</fullName>
        <label>Following From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Please_notify_me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Please notify me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Email_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Comment Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Followers</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comment Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>